[package]
name = "ludum_dare_prep"
version = "0.1.0"
authors = ["nathanieltan <nathaniel98.tan@gmail.com>"]

[dependencies]
ggez = "0.4"
rand = "0.5"
specs = "0.12"
specs-derive = "0.2.0"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies", rev = "aacd12867d886b0331478ab616dcb35e337643a8" }
warmy = "0.7"
failure = "0.1"
log = "0.4"
chrono = "0.4"
nalgebra = "0.16.11"
ncollide2d = "0.17"